Sutter Health/src/objects/CorrespondenceContactAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Bounced_Mail_Reasion__c</fullName>
        <label>Bounced Mail Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Correspondence</relationshipLabel>
        <relationshipName>Correspondence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Correspondence_Letter__c</fullName>
        <label>Correspondence Letter</label>
        <referenceTo>Correspondence_Letter__c</referenceTo>
        <relationshipLabel>CorrespondenceContactAssociations</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Selected_Template__c</fullName>
        <label>Selected Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready For Email Sent</fullName>
                </value>
                <value>
                    <fullName>Mail Sent</fullName>
                </value>
                <value>
                    <fullName>Mail Bounced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <formula>Correspondence_Letter__r.Selected_Template_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Template</label>
        <type>Text</type>
    </fields>
    <label>CorrespondenceContactAssociation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CorrosCon-{00000000}</displayFormat>
        <label>Correspondence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CorrespondenceContactAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>